styles/fields/input.css
input,
textarea,
select {
  appearance: none;
  width: 100%;
  border-radius: 8px;
  border: 1px solid var(--stroke-default);

  padding: 12px 16px;

  font: var(--text);
}

label {
  font: var(--text-sm);
  color: var(--text-secondary);

  display: block;
  margin-bottom: 4px;
}

input:focus,
select:focus,
textarea:focus,
input[type="date"]:focus-within {
  outline: 4px solid var(--surface-secondary);
  border: 2px solid var(--stroke-highlight);
  outline-offset: 0.1px;
}

input[type="date"] {
  position: relative;
  &::-webkit-calendar-picker-indicator {
    opacity: 0;
  }

  &::before {
    content: "";
    position: absolute;
    background: url(../../assets/icons/calendar-03.svg) center/contain;
    right: 16px;
    width: 20px;
    height: 20px;

    top: 50%;
    transform: translateY(-50%);
  }
}

select {
  background: url(../../assets/icons/arrow-down-01.svg) no-repeat
    calc(100% - 16px);
}

.address .flex {
  gap: 20px;
}

.input-wrapper:has([disabled]) {
  opacity: 0.5;
}

input {
  &[disabled] {
    background-color: var(--stroke-disable);

    border: 1px solid var(--stroke-default);

    color: var(--text-primary);
  }

  &:invalid {
    border: 2px solid var(--semantic-error);
  }

  & + small {
    font: var(--text-sm);
    color: #78716c;

    display: inline-block;
    margin-top: 4px;
  }

  &[required] + .error {
    display: flex;
    align-items: center;
    gap: 4px;

    font: var(--text-sm);
    color: var(--semantic-error);

    margin-top: 4px;
  }

  &:not(:focus):valid + .error {
    display: none;
  }
}

